update the new URL for /allversions starting with 1.9.0

--- a/wireshark.nuspec
+++ b/wireshark.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>wireshark</id>
     <title>WireShark</title>
-    <version>1.9.0</version>
+    <version>1.9.0.20130403</version>
     <authors>Gerald Combs, WireShark team</authors>
     <owners>kujotx, WireShark team</owners>
     <summary>wireshark-1.9.0</summary>
